--- a/tesi.tex
+++ b/tesi.tex
@@ -137,18 +137,18 @@
 %
 \begin{document}
 
-\include{Frontespizio}
-\include{Dedica}
-\include{Indice}
-\include{Introduzione}
+% \include{Frontespizio}
+% \include{Dedica}
+% \include{Indice}
+% \include{Introduzione}
 
-\include{Capitoli/Kotlin}
-\include{Capitoli/Firebase}
-\include{Capitoli/Architettura}
-\include{Capitoli/Applicazione}
-\include{Appendice/AppendiceA}
-\include{Conclusioni}
-%\include{Bibliografia}
-\include{Ringraziamenti}
+% \include{Capitoli/Kotlin}
+% \include{Capitoli/Firebase}
+% \include{Capitoli/Architettura}
+ \include{Capitoli/Applicazione}
+% \include{Appendice/AppendiceA}
+% \include{Conclusioni}
+% \include{Bibliografia}
+% \include{Ringraziamenti}
 
 \end{document}
