--- a/Capitoli/Firebase.tex
+++ b/Capitoli/Firebase.tex
@@ -6,7 +6,7 @@
 
 
 Firebase \'e una piattaforma Mobile backend as a service (MBaaS) che consente
-di interfacciare applicazioni mobili e web app ad un cloud backend, fornendo allo sviluppatore servizi utili per la gestione degli utenti, storage, notifiche push e altri strumenti di analisi e sviluppo.\\
+di interfacciare applicazioni mobili e web app ad un cloud backend, fornendo allo sviluppatore servizi utili per la gestione degli utenti, storage, notifiche push ed altri strumenti di analisi e sviluppo.\\
 Il modello su cui si basa la piattaforma \'e relativamente recente poich\'e appoggiandosi al cloud computing, fornisce uno servizio globale e uniforme per connettere client differenti offrendo una sincronizzazione dei dati in tempo reale.\\
 Lo sviluppo di Firebase inizi\'o dall'omonima azienda che nel 2011 svilupp\'o la piattaforma con l'idea di fornire un servizio in grado di sincronizzare dati in tempo reale, successivamente ricevett\'e grande interessa da parte di Google che nel 2014 acquist\'o\footnote{https://techcrunch.com/2014/10/21/google-acquires-firebase-to-help-developers-build-better-realtime-apps/} Firebase e altre startup simili, integrandole con i suoi servizi Google Cloud Platform.
 
@@ -29,19 +29,19 @@ Tra i vari servizi forniti, quelli pi\'u utili, nell'ambito dello sviluppo softw
 
 
 \begin{itemize}                         %crea un elenco puntato
-\item \textbf{Firebase Cloud Messaging}: Soluzione cross-platform per la gestione di notifiche push su Android iOS e Web
+\item \textbf{Firebase Cloud Messaging}: Soluzione cross-platform per la gestione di notifiche push su Android iOS e Web.
 
-\item \textbf{Firebase Auth}: Servizio per la gestione degli utenti con il supporto del social login per Facebook, Github, Twitter, Google
+\item \textbf{Firebase Auth}: Servizio per la gestione degli utenti con il supporto del social login per Facebook, Github, Twitter, Google.
 
-\item \textbf{Realtime Database}: Database noSQL con il supporto della sincronizzazione in tempo reale dei dati fra diversi client
+\item \textbf{Realtime Database}: Database noSQL con il supporto della sincronizzazione in tempo reale dei dati fra diversi client.
 
-\item \textbf{Firebase Storage}: Servizio che offre il trasferimento e l'hosting sicuro dei file
+\item \textbf{Firebase Storage}: Servizio che offre il trasferimento e l'hosting sicuro dei file.
 
-\item \textbf{Firebase Hosting}: Web hosting che fornisce file utilizzando CDN (Content Delivery Network) e HTTP Secure (HTTPS)
+\item \textbf{Firebase Hosting}: Web hosting che fornisce file utilizzando CDN (Content Delivery Network) e HTTP Secure (HTTPS).
 
-\item \textbf{Cloud Functions}: Servizio che permette di eseguire script JavaScript  ogni volta che vi \'e un cambianeto nel database
+\item \textbf{Cloud Functions}: Servizio che permette di eseguire script JavaScript  ogni volta che vi \'e un cambianeto nel database.
 
-\item \textbf{Firestore Database}: Database noSQL basato su documenti con il supporto della sincronizzazione in tempo reale
+\item \textbf{Firestore Database}: Database noSQL basato su documenti con il supporto della sincronizzazione in tempo reale.
 \end{itemize}
 
 
@@ -49,7 +49,7 @@ Tra i vari servizi forniti, quelli pi\'u utili, nell'ambito dello sviluppo softw
 
 %https://firebase.google.com/docs/database/rtdb-vs-firestore
 \section{Database}                 %crea la sezione
-Google offre due differenti database con supporto della sincronizzazone dei dati in tempo reale:
+Google offre due differenti database con supporto della sincronizzazione dei dati in tempo reale:
 
 \begin{itemize}
   \item \textbf{RealTime Database}
@@ -57,14 +57,15 @@ Google offre due differenti database con supporto della sincronizzazone dei dati
 \end{itemize}
 
 
-\textbf{RealTime Database} \'e un cloud database NoSQL che memorizza i dati in un unico file JSON. Il database \'e organizzato attraverso un modello gerarchico ad albero con un unica radice ed ha una struttura senza schema che pu'\o cambiare nel tempo.\\
-Utilizzando l'SDK, tutte le richieste effettuate al RealTime Database vengono memorizzate localmente nella cache del client, e vengono aggiornate in tempo reale al susseguirsi di modifiche ed eventi.\\ Quando il dispositivo precedentemente offline riacquista la connessione, l'SDK del Realtime Database sincronizza le modifiche dei dati locali con gli aggiornamenti remoti che si sono verificati mentre il client era offline, risolvendo automaticamente eventuali conflitti.\\
+\textbf{RealTime Database} \'e un cloud database NoSQL che memorizza i dati in un unico file JSON. Il database \'e organizzato attraverso un modello gerarchico ad albero con un unica radice ed ha una struttura senza schema che pu\'o cambiare nel tempo.\\
+Utilizzando l'SDK, tutte le richieste effettuate al RealTime Database vengono memorizzate localmente nella cache del client, e vengono aggiornate in tempo reale al susseguirsi di modifiche ed eventi all'interno del Database.\\
+Quando il dispositivo precedentemente offline riacquista la connessione, l'SDK del Realtime Database sincronizza le modifiche dei dati locali con gli aggiornamenti remoti che si sono verificati mentre il client era offline, risolvendo automaticamente eventuali conflitti.\\
 
 
-\textbf{Cloud Firestore} \'e un cloud database NoSQL basato sulla memorizzazione dei dati sottoforma di documenti e collezzioni, anche la sua struttura \'e senza schema e pu\'o quindi cambiare nel tempo.\\
+\textbf{Cloud Firestore} \'e un cloud database NoSQL basato sulla memorizzazione dei dati sotto forma di documenti e collezioni, anche la sua struttura \'e senza schema e pu\'o quindi cambiare nel tempo.\\
 Il modello di memorizzazione dei dati \'e basato sui documenti che possono contenere  stringhe e numeri, date, oggetti complessi e annidati.\\
-Questi documenti sono archiviati in raccolte, chiamate collezzioni che contengono i documenti. \'E inoltre possibile creare subcollezioni all'interno dei documenti e creare strutture gerarchiche di dati che scalano man mano che il database cresce.\\
-Gli unici limiti imposti da Firestore sono: la dimensione di un singolo documento che \'e di 1 MiB (1,048,576 bytes) e un massimo di 100 collezzioni annidate.\\
+Questi documenti sono archiviati in raccolte, chiamate collezioni che contengono i documenti, ma \'e anche possibile creare sub-collezioni all'interno dei documenti e creare strutture gerarchiche di dati che scalano man mano che il database cresce.\\
+Gli unici limiti imposti da Firestore sono: la dimensione di un singolo documento che \'e di 1 MiB (1,048,576 bytes) e un massimo di 100 collezioni annidate.\\
 L'SDK del database Firestore mantiene i dati aggiornati attraverso una buona gestione del caching, i client invece utilizzando appositi listener offrono una sincronizzazione dei dati in tempo reale.\\
 L'aggiunta di listener oltre a informare il client su modifiche effettuate nel database, permette di memorizzare le richieste effettuate in precedenza e mantenere una copia delle risposte del server nella cache, offrendo quindi un supporto offline dei dati.\\
 
@@ -91,7 +92,7 @@ String & Stringa di testo codificata in UTF-8.\\
 \end{center}
 \end{table}
 
-L' interrogazione del database Firestore attraverso query risulta essere molto espressiva ed efficiente. La creazione delle query permette di filtrare i dati all'interno di un documento o filtrare collezzioni, con la caratteristiche basilari delle interrogazioni: l'ordinamento, il filtraggio e limiti sui risultati di una query. Si possono filtrare anche sottocampi di un oggetto Map, ma non \'e possibile filtrare o ordinare un elemento di tipo Reference che serve solo ad indicare il riferimento di un documento all'interno del database.\\
+L' interrogazione del database Firestore attraverso query risulta essere molto espressiva ed efficiente. La creazione delle query permette di filtrare i dati all'interno di un documento o filtrare collezioni, con la caratteristiche basilari delle interrogazioni: l'ordinamento, il filtraggio e limiti sui risultati di una query. Si possono filtrare anche sottocampi di un oggetto Map, ma non \'e possibile filtrare o ordinare un elemento di tipo Reference che serve solo ad indicare il riferimento di un documento all'interno del database.\\
 Cloud Firestore offre un SDK con una buona integrazione per dispositivi mobili Android, iOS e web apps, ma permette l'utilizzo dei servizi anche offrendo SDK aggiuntive per altri linguaggi di programmazione come: NodeJS, Java, Python, e GO.\\
 
 
@@ -99,29 +100,27 @@ Ricapitolando, possiamo definire Firestore come una nuova versione di Firebase R
 
 \begin{table}[h]
 \begin{center}
-
-\begin{tabular}{|p{7cm}|p{7cm}|}
+\begin{tabular}{|p{7.5cm}|p{7cm}|}
     \hline
     \textbf{RealTime Firebase} & \textbf{Firestore} \\ \hline
-    Memorizza i dati in un unico file JSON & Memorizza i dati in collezzioni contententi documenti \\ \hline
+    Memorizza i dati in un unico file JSON & Memorizza i dati in collezioni contententi documenti \\ \hline
     Supporto per i dati offline su Android e iOS & Supporto per i dati offline su Android, iOS e Web \\ \hline
     Depp Query con ordinamento e condizioni sui dati limitate & Query con ordinamento, condizioni sui dati, indicizzazione, alte performance \\ \hline
     Memorizzazione di dati come singole operazioni. & Memorizzazione e transizioni sui dati atomiche.\\ \hline
     Validazione dei dati manuale, e settaggio manuale di regole di protezione sui dati &  Validazione dei dati automatica, e regole di protezione sui dati manuali\\
 \hline
 \end{tabular}
-\caption[Firebase vs Firestore ]{Cofronto dei due database Firebase}\label{tab:FirestorevSFirebase}
+\caption[Firebase vs Firestore ]{Confronto dei due database Firebase}\label{tab:FirestorevSFirebase}
 \end{center}
 \end{table}
 
 
-
 \subsection{Database Rules}                 %crea la sezione
 Firebase offre per i suoi due database la possibilit\'a di inserire delle restrizioni e regole di sicurezza per l'accesso al Database, chiamate Database Rules.\\
-Le Database Rules determinano chi ha accesso in lettura e scrittura al database o a collezzioni di dati all'interno del database, queste regole sono gestite utilizzando il pannello di controllo di Firebase, una volta scritte le regole queste vengono applicate automaticamente ad ogni modifica. \\
+Le Database Rules determinano chi ha accesso in lettura e scrittura al database o a collezioni di dati all'interno del database, queste regole sono gestite utilizzando il pannello di controllo di Firebase, una volta scritte le regole queste vengono applicate automaticamente ad ogni modifica. \\
 Ogni richiesta di lettura e scrittura di dati nel database sar\'a completata solo se le regole lo consentono.\\
-Entrambi i database: Real time e Firestore supportano le Database Rules, le differenze fra i due servizi riguardano il metodo con cui vengono scritte le regole e il tipo di controlli che \'e possibile effetuare.\\
-Firebase permette di scrivere le regole utilizzando un file in formato JSON dove vengono definite le regole in base alla collezzione in cui si trovano i dati, alla validazione dei dati o in base all'utente loggato su Firebase Auth.\\
+Entrambi i database: Real time e Firestore supportano le Database Rules, le differenze fra i due servizi riguardano il metodo con cui vengono scritte le regole e il tipo di controlli che \'e possibile effettuare.\\
+Firebase permette di scrivere le regole utilizzando un file in formato JSON dove vengono definite le regole in base alla collezione in cui si trovano i dati, alla validazione dei dati o in base all'utente loggato su Firebase Auth.\\
 Le regole applicate al database RealTime hanno una sintassi simile a JavaScript e mettono a disposizione del programmatore quattro tipi di controlli:
 
 \begin{table}[h]
@@ -132,9 +131,9 @@ Le regole applicate al database RealTime hanno una sintassi simile a JavaScript 
     .read & Descrive se e quando i dati possono essere letti dagli utenti.\\ \hline
     .write & Descrive se e quando i dati possono essere scritti dagli utenti\\ \hline
      .validate & Definisce l'aspetto di un valore formattato correttamente, se ha attributi figli e il tipo di dato\\ \hline
-    .indexOn & Specifica una collezzione da indicizzare per supportare l'ordine e l' interrogazione\\ \hline
+    .indexOn & Specifica una collezione da indicizzare per supportare l'ordine e l' interrogazione\\ \hline
 \end{tabular}
-\caption[Firbase Rules ]{Firebase Rules}\label{tab:Firebase Rules}
+\caption[Firbase Rules ]{Firebase Database Rules}\label{tab:Firebase Database Rules}
 \end{center}
 \end{table}
 
@@ -161,10 +160,10 @@ Le regole per il database RealTime vengono memorizzate in formato JSON sui serve
 
 Le regole di sicurezza del database Firestore sono simili a quelle del RealTime Database ma prevedono un controllo degli accessi e della validazione dei dati in un formato pi\'u semplice ed espressivo.\\
 Tutte le regole di sicurezza Firestore sono costituite da dichiarazioni di corrispondenza chiamate ``match'' che identificano i documenti nel database e consentono la creazione di espressioni che controllano l' accesso a tali documenti.\\
-Oltre alle regole di scrittura, letttura, validazione \'e possibile creare funzioni ausiliarie per semplificare e rendere pi\'u intuitiva la scritture delle regole.\\
+Oltre alle regole di scrittura, lettura, validazione \'e possibile creare funzioni ausiliarie per semplificare e rendere pi\'u intuitiva la scritture delle regole.\\
 Un esempio di scrittura di alcune regole su un database Firestore \'e il seguente:
 
-\begin{lstlisting}[language=javascript,caption={Firestore Rules}]
+\begin{lstlisting}[language=javascript,caption={Firestore Database Rules}]
 service cloud.firestore {
   match /databases/{database}/documents {
     function signedInOrPublic() {
@@ -182,18 +181,18 @@ service cloud.firestore {
 
 \section{Cloud Functions}                 %crea la sezione
 
-Le Cloud Functions consentono di eseguire del codice backend in risposta a modifiche effettuate nel database Firestore o RealTime.\\
+Le Cloud Functions consentono di eseguire script backend in risposta a modifiche effettuate nel database Firestore o RealTime, o sullo storage Firebase.\\
 I linguaggi utilizzati per scrivere le Cloud Functions sono JavaScript e TypeScript, una volta scritta una funzione essa viene memorizzata e gestita dai server Firebase e man mano che il carico aumenta o diminuisce, Google scala automaticamente il numero di istanze di server virtuali necessari per eseguire le funzioni.
 
 
 Il ciclo di vita di una funzione \'e il seguente:
 \begin{itemize}
-  \item Lo sviluppatore scrive il codice per una nuova funzione, selezionando un provider di eventi (Realtime Database, Firestore) e definisce le condizioni in cui la funzione deve essere eseguita
+  \item Lo sviluppatore scrive il codice per una nuova funzione, selezionando un provider di eventi (Realtime Database, Firestore, Storage) e definisce le condizioni in cui la funzione deve essere eseguita
   \item Lo sviluppatore tramite un tool a linea di comanda invia la funzione sui server di Firebase
   \item Quando il provider dell' evento genera un evento che corrisponde alle condizioni della funzione, il codice viene eseguito
   \item Se sono presenti pi\'u eventi da gestire contemporaneamente, Google creer\'a pi\'u instanze per gestire il lavoro pi\'u velocemente
-  \item Quando lo sviluppatore aggiorna la funzione distribuendo il codice aggiornato, tutte le istanze per la vecchia versione vengono ripulite e sostituite da nuove istanze
-  \item Quando uno sviluppatore cancella la funzione, tutte le istanze vengono ripulite e la connessione tra la funzione e il provider dell' evento viene rimossa
+  \item Quando lo sviluppatore aggiorna la funzione distribuendo il codice aggiornato, tutte le istanze per la vecchia versione vengono cancellate e sostituite da nuove istanze
+  \item Quando uno sviluppatore cancella una funzione, tutte le istanze vengono cancellate e la connessione tra la funzione e il provider dell' evento viene rimossa
 \end{itemize}
 
 
@@ -204,17 +203,17 @@ Cloud Functions mette a disposizione 4 tipi di controllo sul database:
 \begin{tabular}{|p{2cm}|p{12cm}|}
     \hline
     \textbf{Evento} & \textbf{Trigger} \\ \hline
-    onCreate &  Attivato quando si scrive un documento per la prima volta.\\ \hline
-    onUpdate &  Attivato quando esiste gi\'a un documento e se ne modifica un valore.\\ \hline
-    onDelete &  Attivato quando un documento con dati viene eliminato.\\ \hline
+    onCreate & Attivato quando si scrive un documento per la prima volta.\\ \hline
+    onUpdate & Attivato quando esiste gi\'a un documento e se ne modifica un valore.\\ \hline
+    onDelete & Attivato quando un documento con dati viene eliminato.\\ \hline
     onWrite & Attivato quando si attiva onCreate, onUpdate o onDelete.\\ \hline
 
 \end{tabular}
-\caption[Firestore Rules]{Firestore Rules}\label{tab:Firestore Rules}
+\caption[Firestore Rules]{Controlli Cloud Functions}\label{tab:Controlli Cloud Functions}
 \end{table}
 
 
-La stesura di una funzione viene effettuata definendo funzioni JavaScript o TypeScript e indicando il documento o collezzione sui cui si vuole fare riferimento, seguito dal tipo di evento:
+La stesura di una funzione viene effettuata definendo funzioni JavaScript o TypeScript ed indicando il documento o la collezione sui cui si vuole fare riferimento, seguito dal tipo di evento:
 
 
 
@@ -242,7 +241,7 @@ Le cloud functions possono essere utilizzati anche interagendo con gli altri ser
   \caption{Firebase Storage e Cloud Functions esempio 1}\label{fig:Firebase Storage e Cloud Functions esempio 1}
 \end{figure}
 
-In questo esempio un funzione si attiva quando un immagine viene caricata in sullo Storage Firebase, la funzione scarica l'immagine e ne crea una versione miniaturizzata, in seguito scrive il riferimento della miniatura sul database, in modo che un'applicazione client possa trovarla e utilizzarla.\\
+In questo esempio, una funzione del servizio Cloud Function rimane in ascolto su cambiamenti nello Storage in atttesa che un'immagine venga caricata, Quando un utente aggiunger\'a un immagine nello storage, verr\'a richiamata la funzione che scaricher\'a l'immagine e ne creer\'a una versione miniaturizzata, in seguito scriver\'a il riferimento della miniatura sul database, in modo che un'applicazione client possa trovarla e utilizzarla.\\
 % Un'altro esempio \'e l'utilizzo delle cloud functions per effettuare controlli su un tipo di linguaggio inappropriato all'interno di una chat,forum o commento:\\
 %
 % \begin{figure}[h!]
@@ -252,15 +251,15 @@ In questo esempio un funzione si attiva quando un immagine viene caricata in sul
 %   \label{fig:Firebase Storage e Cloud Functions esempio 2}
 % \end{figure}
 %
-% Quando un messaggio viene scritto all'interno della collezzione ``msgs'' la funzione che ascolta gli eventi di scrittura ne recupera i dati, elabora il testo per rilevare la presenza di un linguaggio non appropriato e infine riscrivere il messaggio ricevuto correggendolo o eliminando parti di linguaggio volare, applicando cosi una moderazione del testo lato server.
+% Quando un messaggio viene scritto all'interno della collezione ``msgs'' la funzione che ascolta gli eventi di scrittura ne recupera i dati, elabora il testo per rilevare la presenza di un linguaggio non appropriato e infine riscrivere il messaggio ricevuto correggendolo o eliminando parti di linguaggio volare, applicando cosi una moderazione del testo lato server.
 
 \newpage
 %https://developer.xamarin.com/guides/android/data-and-cloud-services/google-messaging/firebase-cloud-messaging/
 \section{Cloud Messaging}                 %crea la sezione
 Firebase Cloud Messaging (FCM) \'e una soluzione di messaggistica multipiattaforma che consente di inviare messaggi tra dispositivi con la possibilt\'a di notificare a una o pi\'u applicazioni client che sono disponibili nuovi dati.\\
 \'E possibile inviare messaggi tramite l'Admin SDK\footnote{https://firebase.google.com/docs/admin/setup} o le API HTTP e XMPP, rispettando la dimensione massima di un messaggio corrispondente a 4KB.\\
-I messaggi possono essere di due tipologie: messaggi di notifica e messaggi di dati, l differenza fra i due tipi di messaggi \'e la loro composizione: i messaggi di notifica contengono un insieme predefinito di chiavi visualizzabili dall' utente, mentre i messaggi di dati contengono solo un insieme di chiave-valore definito dall'utente.\\
-Entrambi i messaggi richiedono di definire il campo obbligatorio ``token'' che \'e il riferimento di un dispositivo o di un gruppo di dispositivi, questo token \'e generato tramite l'SDK di Firebase e deve essere memorizzato su un server per poter essere riutilizzato, in caso contrario l'SDK permette di aggiornare il token del dispositivo.
+I messaggi possono essere di due tipologie: messaggi di notifica e messaggi di dati, la differenza fra i due tipi di messaggi \'e la loro composizione: i messaggi di notifica contengono un insieme predefinito di chiavi visualizzabili dall'utente, mentre i messaggi di dati contengono solo un insieme di chiave-valore definito da chi invia il messaggio.\\
+Entrambi i messaggi richiedono di definire il campo obbligatorio ``token'' che \'e il riferimento ad un dispositivo o di un gruppo di dispositivi, questo token \'e generato tramite l'SDK di Firebase e deve essere memorizzato su un server per poter essere riutilizzato, in caso contrario l'SDK permette di aggiornare il token del dispositivo.
 
 \begin{figure}[!hb]
   \centering
@@ -271,14 +270,14 @@ Entrambi i messaggi richiedono di definire il campo obbligatorio ``token'' che \
 
 \newpage
 La ricezione dei messaggi di Cloud Messaging \'e possibile solo se si utilizza l'apposito SDK e si ottiene un token, necessario per inviare un messaggio ad un dispositivo specifico.\\
-All'avvio iniziale dell' applicazione, l'SDK FCM genera un token di registrazione per l'istanza dell' applicazione client.\\
-I token e la ricezione dei messaggi possono essere controllati utilizzando le classi offerte dall'SDK.
+All'avvio iniziale dell'applicazione, l'SDK FCM genera un token di registrazione per l'istanza dell'applicazione client.\\
+I token e la ricezione dei messaggi possono essere controllati utilizzando le funzioni offerte dall'SDK.
 La classe "FirebaseInstanceIdService" viene utilizzata per la gestione dei token, mentre la classe "FirebaseMessagingService" viene utilizzata per la gestione dei messaggi ricevuti.\\
-Il token di registrazione pu\'o cambiare quando l'applicazione elimina il token, ripristina,riinstalla, dinistalla l'app, o quando vengono eliminare le cache e i dati dal dispositivo.
+Il token di registrazione pu\'o cambiare quando l'applicazione elimina il token, ripristina, reinstalla, disnistalla l'app, o quando vengono eliminate le cache e i dati dal dispositivo.
 
 
 \subsection{Messaggi}
-I messaggi di dati inviabili tramite l'SDK o richieste HTTPS possono essere:
+I messaggi di dati inviabili tramite l'SDK o richieste HTTPS possono essere di due tipi:
 \begin{itemize}
     \item Downstream Messaging
     \item Upstream Messaging
@@ -299,14 +298,14 @@ I messaggi Downstream, permettono di inviare una notifica push dal Server verso 
 \begin{itemize}
     \item Il server (per esempio Cloud Functions) invia il messaggio a FCM
     \item Se il client non \'e disponibile, il server FCM memorizza il messaggio in una coda per la successiva trasmissione. I messaggi vengono conservati nella memoria FCM per un massimo di 4 settimane
-    \item Quando il dispositivo client \'e disponibile, FCM inoltra il messaggio all' applicazione
-    \item L' applicazione client riceve il messaggio da FCM, lo elabora e lo visualizza all' utente
+    \item Quando il dispositivo client \'e disponibile, FCM inoltra il messaggio all'applicazione
+    \item L' applicazione client riceve il messaggio da FCM, lo elabora e lo visualizza all'utente
 \end{itemize}
 
 
-In alternative oltre all'invio di un messaggio ad un singolo dispositivo FCM consente la creazione di gruppi di utenti, permettendo con un singolo token di inviare un messaggio a tutti i dispositivi appartenenti ad un gruppo.\\
+In alternativa oltre all'invio di un messaggio ad un singolo dispositivo FCM consente la creazione di gruppi di utenti, permettendo con un singolo token di inviare un messaggio a tutti i dispositivi appartenenti ad un gruppo.\\
 
-Sulla base del modello di pubblicazione/iscrizione invece, FCM consente anche di inviare un messaggio a pi\'u dispositivi che hanno si sono registrati ad un particolare argomento.
+Sulla base del modello di pubblicazione/iscrizione invece, FCM consente anche di inviare un messaggio a pi\'u dispositivi che si sono registrati ad un particolare argomento.
 
 \begin{figure}[!hb]
   \centering
@@ -316,31 +315,31 @@ Sulla base del modello di pubblicazione/iscrizione invece, FCM consente anche di
 
 
     \begin{itemize}
-        \item L'applicazione client si iscrive a un argomento inviando un messaggio di sottoscrizione all server FCM.
+        \item L'applicazione client si iscrive a un argomento inviando un messaggio di sottoscrizione al server FCM.
         \item Il server invia messaggi tematici a FCM per la distribuzione.
-        \item Quando il dispositivo client \'e disponibile, FCM inoltra il messaggio all' applicazione.
-        \item  FCM inoltra messaggi tematici ai clienti che si sono abbonati a tale argomento.
+        \item Quando il dispositivo client \'e disponibile, FCM inoltra il messaggio all'applicazione.
+        \item FCM inoltra messaggi tematici ai client che si sono registrati a tale argomento.
 
     \end{itemize}
 
 
 
 
-Per iscriversi a un argomento, l' applicazione client chiama la funzione
+Per iscriversi a un argomento, l'applicazione client chiama la seguente funzione:
 
 \begin{lstlisting}[language=java,caption={FCM topic}]
  FirebaseMessaging.getInstance().subscribeToTopic("news");
 \end{lstlisting}
 
-Per annullare l' iscrizione, l' applicazione client deve richiamare unsubscribeFromTopic() con il nome del topic.
+Per annullare l'iscrizione, l'applicazione client deve richiamare unsubscribeFromTopic() con il nome del topic dal quale disistrivers.
 
 
 
 
 
-\subsection{Parametri}
+\subsection{Parametri Cloud Messaging}
 
-Oltre al destinatario \'e possobile definire anche la priorit\'a di un messaggio, la durata, il suono, l'icona, il tempo di vita e altri parametri opzionali.
+Oltre al destinatario \'e possibile definire anche la priorit\'a di un messaggio, la durata, il suono, l'icona, il tempo di vita e altri parametri opzionali.
 
 I principali parametri messi a disposizione da Firebase sono:
 
@@ -349,16 +348,16 @@ I principali parametri messi a disposizione da Firebase sono:
 \begin{tabular}{|p{3cm}|p{11cm}|}
 \hline
 \textbf{Paramentro} & \textbf{Descrizione} \\ \hline
-Title &	Titolo della notifica. \\   \hline
+Title &	Titolo della notifica \\   \hline
 Body &	Testo della notifica \\   \hline
-Sound  &	Suono da riprodurre quando il dispositivo riceve la notifica. \\   \hline
-Sottotitolo  &	Sottotitolo della notifica. \\   \hline
+Sound  &	Suono da riprodurre quando il dispositivo riceve la notifica \\   \hline
+Sottotitolo  &	Sottotitolo della notifica \\   \hline
 Icon & Icona della notifica \\   \hline
-Timetolive & Specifica per quanto tempo (in secondi) il messaggio deve essere conservato se il dispositivo \'e offline.  \\   \hline
-Clickaction &	L' azione associata al click della notifica. \\   \hline
+Timetolive & Specifica per quanto tempo (in secondi) il messaggio deve essere conservato se il dispositivo \'e offline  \\   \hline
+Clickaction & L'azione associata al click della notifica \\   \hline
 
 \end{tabular}
-\caption[Cloud Messaging paramentri ]{FCM parametri}\label{tab:FCFM parametri}
+\caption[Cloud Messaging paramentri]{Cloud Messaging parametri}\label{tab:Cloud Messaging parametri}
 \end{center}
 \end{table}
 
@@ -366,7 +365,7 @@ Clickaction &	L' azione associata al click della notifica. \\   \hline
 \subsection{Priorit\'a}
 Esistono due opzioni per assegnare la priorit\'a di consegna ai messaggi: normale ed alta priorit\'a. Il recapito di messaggi normali e di alta priorit\'a funziona in questo modo:
 \begin{itemize}
-\item  \textbf{Priorit\'a normale}: i messaggi vengono inviati immediatamente quando l' app \'e in primo piano, quando invece il dispositivo \'e in modalit\'a Doze o l' applicazione \'e in standby la consegna potrebbe essere ritardata per risparmiare la batteria, i messaggi in questo caso richiedono di pianificare un job FJD (Firebase Job Dispache) o un JobIntentService per gestire la notifica quando la rete sar\'a nuovamaente disponibile.
+\item  \textbf{Priorit\'a normale}: i messaggi vengono inviati immediatamente quando l'app \'e in primo piano, quando invece il dispositivo \'e in modalit\'a Doze o l'applicazione \'e in standby la consegna potrebbe essere ritardata per risparmiare la batteria, i messaggi in questo caso richiedono di pianificare un Job FJD (Firebase Job Dispache) o un JobIntentService per gestire la notifica quando il dispositivo sar\'a nuovamente online.
 \item \textbf{Alta priorit\'a}: Il server Cloud Messaging tenta di inviare immediatamente il messaggio ad alta priorit\'a, consentendo al servizio, attraverso l'SDK di cambiare lo stato del dispositivo e di eseguire alcune elaborazioni limitate (compreso un accesso alla rete molto limitato).
 \end{itemize}
 
@@ -375,9 +374,9 @@ Esistono due opzioni per assegnare la priorit\'a di consegna ai messaggi: normal
 
 
 \section{FirebaseUI}                 %crea la sezione
-FirebaseUI\footnote{https://firebaseopensource.com/projects/firebase/firebaseui-android/} \'e un insieme di librerie open-source disponibile per diverse piattaforme, che consentono di semplificare lo sviluppo di un applicazione che utilizza Firebase.\\
-La libreria offre una versione semplificata della gestione dell'autenticazione, fornendo metodi che si integrano con i pi\'u comuni social, migliora la comunicazione tra le view del dispostivio client e il database, e facilita la gestione del servizio Firebase Storage.\\
-FirebaseUI dispone di moduli separati per utilizzare i vari servizi: Firebase Realtime Database, Cloud Firestore, Firebase Auth e Cloud Storage.
+FirebaseUI \'e un insieme di librerie open-source\footnote{https://firebaseopensource.com/projects/firebase/firebaseui-android/} disponibile per diverse piattaforme, che consentono di semplificare lo sviluppo di un applicazione che utilizza Firebase.\\
+La libreria offre una versione semplificata della gestione dell'autenticazione, fornendo metodi che si integrano con i pi\'u comuni social, migliorando la comunicazione tra le View dell'interfaccia utente e il database, e facilita inoltre il collegamento e le richieste con il servizio Firebase Storage.\\
+FirebaseUI dispone di moduli separati per utilizzare le varia librerie dedicate ai servizi:
 \begin{itemize}
   \item  FirebaseUI Auth
   \item  FirebaseUI Firestore
@@ -387,7 +386,6 @@ FirebaseUI dispone di moduli separati per utilizzare i vari servizi: Firebase Re
 
 
 FirebaseUI-Auth cerca di gestire tutte le possibili casistiche che si possono riscontrare durante il login e la registrazione di un nuovo utente.
-La libreria FirebaseUIAuth offre una integrazione con i social login pi\'u diffusi (Google, Facebook, Twitter) e una buona integrazione con Smart Lock per memorizzare e recuperare le credenziali, consentendo l' accesso automatico e il single-tap sign-in, gestendo anche casi d'uso pi\'u complessi come il recupero dell'account e il collegamento di account multipli che sono sensibili alla sicurezza e difficili da implementare correttamente utilizzando le API di base fornite da Firebase Auth.\\
-FirebaseUI-Firestore semplifica la comunicazione e l'interazione dei dati fra Cloud Firestore e l'interfaccia utente dell' applicazione, fornendo un adapter personalizzato  (FirestoreRecyclerAdapter) che consente la manipolazione e la sincronizzazione automatica dei dati.
-
+La libreria FirebaseUI-Auth offre una integrazione con i social login pi\'u diffusi (Google, Facebook, Twitter) e una buona integrazione con Smart Lock per memorizzare e recuperare le credenziali, consentendo l' accesso automatico e il single-tap sign-in, gestendo anche casi d'uso pi\'u complessi come il recupero dell'account e il collegamento di account multipli che sono sensibili alla sicurezza e difficili da implementare correttamente utilizzando le API di base fornite da Firebase.\\
+FirebaseUI-Firestore semplifica la comunicazione e l'interazione dei dati fra Cloud Firestore e l'interfaccia utente dell' applicazione, fornendo un adapter personalizzato (FirestoreRecyclerAdapter) che consente la manipolazione e la sincronizzazione automatica dei dati, senza dover scrivere codice ripetitivo per ogni adapter che si interfaccia con il database.
 \clearpage{\pagestyle{empty}\cleardoublepage}
