--- a/Capitoli/Kotlin.tex
+++ b/Capitoli/Kotlin.tex
@@ -164,10 +164,8 @@ Kotlin operando ad alto livello, rimuove e astrae le due distinzioni poich\'e di
 
 \begin{table}[h]
 \begin{center}
-\begin{tabular}{|p{3cm}|p{10cm}|}
-    \hline
-\textbf{Tipo} & \textbf{Oggetto} & \textbf{Dimensione} \\ \hline
-    Tipo & Oggetto & Dimensione \\ \hline
+    \begin{tabular}{ | l | l | l | p{5cm} |} \hline
+    \textbf{Tipo} & \textbf{Oggetto} & \textbf{Dimensione} \\ \hline
     int & Int & 32 bits\\ \hline
     boolean & Boolean & 1 bits\\ \hline
     byte & Byte & 8 bits\\ \hline
@@ -176,7 +174,6 @@ Kotlin operando ad alto livello, rimuove e astrae le due distinzioni poich\'e di
     float & Float & 32 bits\\ \hline
     double & Double & 64 bits\\ \hline
     char & Char & 16 bits\\ \hline
-\hline
 \end{tabular}
 \caption[Variabili primitive Kotlin]{Variabili primitive in Kotlin}\label{tab:Variabili primitive in Kotlin}
 \end{center}
